[gd_scene load_steps=4 format=3 uid="uid://dtnwewlt0320a"]

[ext_resource type="Theme" uid="uid://deqbs7na0dine" path="res://assets/ui/schematic.theme" id="1_ohg08"]
[ext_resource type="Script" path="res://parts/BusColor.gd" id="3_fr76u"]
[ext_resource type="PackedScene" uid="uid://cebba5vujpuxs" path="res://scenes/color_picker.tscn" id="4_qr6hf"]

[node name="BusColor" type="GraphNode"]
custom_minimum_size = Vector2(0, 60)
offset_right = 20.0
offset_bottom = 36.0
theme = ExtResource("1_ohg08")
slot/0/left_enabled = true
slot/0/left_type = 1
slot/0/left_color = Color(1, 1, 0, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("3_fr76u")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
color = Color(1, 1, 0, 1)

[node name="ColorPicker" parent="." instance=ExtResource("4_qr6hf")]
visible = false

[node name="Tag" type="Label" parent="."]
visible = false
layout_mode = 2

[connection signal="gui_input" from="ColorRect" to="." method="_on_color_rect_gui_input"]
[connection signal="changed_color" from="ColorPicker" to="." method="_on_color_picker_changed_color"]
